fixed text align

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+h1, h2, h3, h4, h5, h6, a, p {
+  text-align: initial;
+}
+
 .App {
   text-align: center;
 }
