--- a/src/components/Electronics/Customize/Form/Form.scss
+++ b/src/components/Electronics/Customize/Form/Form.scss
@@ -1,6 +1,6 @@
 #custom-form {
     h1 {
-        font-family: "Poppins";
+        font-family: "Poppins", serif;
         font-size: 20px;
         color: #053b6c;
         font-weight: bold;
@@ -29,7 +29,7 @@
         border-radius: 50%;
     }
 
-    
+
     .form-check-label {
         color: #053b6c;
         padding: 15px;
